[package]
name = "msocks"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"

[dependencies]
mio = "*"
log = "*"
env_logger = "*"
failure = "*"
failure_derive = "*"
tokio = {version="*", features=["async-await-preview"]}
native-tls = "*"
trust-dns-resolver = "*"
tokio-tls = "*"
websocket = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
uuid = {version="*", features=["serde"]}
hyper = "*"
