[package]
name = "rocks"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.*"
env_logger = "0.6.*"
failure = "0.1.*"
failure_derive = "0.1.*"
trust-dns-resolver = "0.11.*"
tokio-tls = "0.2.*"
serde = "1.*"
serde_derive = "1.*"
uuid = {version="0.7.*", features=["serde", "v4"]}
clap = "2.*"
toml = "0.5.*"
rustls="0.14.*"
# actix-web="0.7.*"
crossbeam="0.7.*"
bytes="0.4.*"
hyper="0.12.*"
futures-preview={ version="0.3.0-alpha.17", features=["async-await", "nightly", "compat"] }
tokio = {version="0.2.*", git="https://github.com/tokio-rs/tokio"}
ctrlc = { version="3.1.*", features=["termination"] }