[package]
name = "rocks"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
# failure = "0.1.*"
# failure_derive = "0.1.*"
# trust-dns-resolver = "0.20.4"
# tokio-tls = "0.2.*"
# # actix-web="0.7.*"
# crossbeam="0.7.*"
# bytes="0.4.*"
# hyper="0.12.*"
# ctrlc = { version="3.1.*", features=["termination"] }
tokio = { version="1.17", features = ["full"] }
clap = "3.1"
derive_more="0.99.17"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
rustls = "0.20.4"
uuid = { version="0.8.2", features=["serde", "v4"]}
futures = "0.3.21"